<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Justicia Cotidiana</string>
    <string name="about_name">¿Qué es la justicia cotidiana?</string>
    <string name="testimonio_name">Testimonios</string>
    <string name="propuesta_name">Propuestas</string>
    
    <string name="about_description">La justicia cotidiana es el primer contacto entre ciudadanía y Estado para resolver problmeas y abusos que se cometen todos los dias. Una justicia para todos y para todas, todos los dias y en todo lugar. Ayudará a reconstruir la confianza y certidumbre del país.</string>
    
    <string name="action_settings">Preferencias</string>
    <string name="action_close">Cerrar</string>
    
    <string name="que_es_justicia">Aplicación para recopilar y visualizar testimonios y propuestas de Justicia Cotidiana en México</string>
    
    <!-- Acerca de -->
    <string name="acercade_name">Acerca de</string>
    <string name="acercade_description">El Centro de Investigación y Docencia Económicas (CIDE) es una institución pública y autónoma fundada en 1974 que se dedica a la docencia e investigación en ciencias sociales, comprometido con la generación de conocimiento que pueda ser relevante para el desarrollo nacional. Se ha orientado al diseño y evaluación de políticas públicas, al diagnóstico de problemas sociales y a la elaboración de propuestas de solución, desde una perspectiva plural, con la participación de politólogos, abogados, economistas, internacionalistas, entre otros especialistas.
\n\nEn noviembre de 2014, el Presidente de la República solicitó al CIDE  la tarea de encabezar una amplia consulta que permitiera el diálogo entre ciudadanos, académicos, organizaciones sociales, especialistas, autoridades, con el propósito de elaborar recomendaciones para hacer más eficaz el sistema de justicia, que las reglas de convivencia social se cumplan, las personas puedan reivindicar sus derechos y los infractores tengan consecuencias por sus actos.
\n\nEn conjunto con Infotec, centro público de innovación y desarrollo tecnológico adscrito al Consejo Nacional de Ciencia y Tecnología (Conacyt), el CIDE e instituciones aliadas hemos construido esta plataforma tecnológica que permite recopilar testimonios desde cualquier lugar del país sobre las problemáticas referidas y conocer las propuestas de expertos para mejorar la justicia en México. 
\n\nGracias por participar.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh nec sapien sagittis pretium. Morbi pharetra bibendum convallis. Sed iaculis, magna in ultrices egestas, tellus nulla tempor est, ut congue velit lacus porta felis. Duis enim ex, commodo et molestie id, eleifend eget risus. Suspendisse eu dolor suscipit, sollicitudin diam vel, sodales orci. Morbi suscipit felis nec dapibus facilisis. Sed nec nulla in dui ultricies gravida non eleifend urna. Curabitur lectus elit, maximus id commodo ut, lobortis et ligula. Duis viverra mi quis congue hendrerit. Suspendisse potenti.</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh nec sapien sagittis pretium. Morbi pharetra bibendum convallis. Sed iaculis, magna in ultrices egestas, tellus nulla tempor est, ut congue velit lacus porta felis. Duis enim ex, commodo et molestie id, eleifend eget risus. Suspendisse eu dolor suscipit, sollicitudin diam vel, sodales orci. Morbi suscipit felis nec dapibus facilisis. Sed nec nulla in dui ultricies gravida non eleifend urna. Curabitur lectus elit, maximus id commodo ut, lobortis et ligula. Duis viverra mi quis congue hendrerit. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh nec sapien sagittis pretium. Morbi pharetra bibendum convallis. Sed iaculis, magna in ultrices egestas, tellus nulla tempor est, ut congue velit lacus porta felis. Duis enim ex, commodo et molestie id, eleifend eget risus. Suspendisse eu dolor suscipit, sollicitudin diam vel, sodales orci. Morbi suscipit felis nec dapibus facilisis. Sed nec nulla in dui ultricies gravida non eleifend urna. Curabitur lectus elit, maximus id commodo ut, lobortis et ligula. Duis viverra mi quis congue hendrerit. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in nibh nec sapien sagittis pretium. Morbi pharetra bibendum convallis.</string>
    <string name="acercade_politicas">Términos y condiciones</string>
    
    <!-- Dialog Testimonio -->
    <string name="dialog_message_testimonio">Muchas gracias por enviar tu testimonio. En breve aparecerá en la plataforma y nos ayudará a mapear la injusticia cotidiana en México.</string>
    <string name="dialog_message_propuesta_vote">¡Gracias por enviar tu voto!</string>
    <string name="dialog_message_propuesta_answer">¡Gracias por enviar tu respuesta!</string>
    <string name="dialog_message_propuesta_comment">¡Gracias por enviar tu comentario!</string>
    <string name="dialog_error">Algo salió mal. Inténtalo de nuevo.</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_share">Compartir</string>
    
    <string name="dialog_share_testimonio">He enviado un testimonio sobre #%1$s desde www.justiciacotidiana.mx @JusCotidiana</string>
    
    <string name="no_internet_connection">Sin conexión a Internet.</string>
    
    <!-- Testimonios -->
    <string name="error_testimonios_recientes">No se puso cargar la información de los testimonios. Inténtalo más tarde.</string>
    
    <!-- Propuestas -->
    <string name="error_propuestas_recientes">No se puso cargar la información de las propuestas. Inténtalo más tarde.</string>
    
    <!-- Parse Framework -->
    <string name="hello_message">Welcome! Tell us a bit more about yourself.</string>
    <string name="age_text_view">Age</string>
    <string name="gender_male_button">Male</string>
    <string name="gender_female_button">Female</string>
    <string name="gender_text_view">Gender</string>
    
    <string name="alert_dialog_success">Saved!</string>
    <string name="alert_dialog_failed">Failed with error.</string>
    <string name="save_button">Save</string>

    <!-- Main -->
    <string name="main_menu_option_1">¿Qué es la justicia cotidiana?</string>
    <string name="main_menu_option_2">Testimonios</string>
    <string name="main_menu_option_3">Propuestas</string>
    
    <string name="main_menu_option_description_1">Conoce los conceptos y datos relevantes.</string>
    <string name="main_menu_option_description_2">Envía testimonios de injusticias o abusos, según categorías.</string>
    <string name="main_menu_option_description_3">Vota y argumenta las propuestas para mejorar la Justicia Cotidiana.</string>
    
    <string name="testimonios_btn_map">Mapa de testimonios</string>
    
    <string name="testimonios_btn_moredescription">+</string>
    <string name="testimonios_news">Testimonios recientes</string>
    <string name="testimonios_add_btn_new">Agregar testimonio</string>
    <string name="testimonios_add_new">Nuevo testimonio</string>
    <string name="testimonios_seemore">Ver mas</string>
    <string name="testimonios_nomore">Sin testimonios en esta categoría</string>
    
    <!-- Types of justice -->
    <string name="justice_trabajo">Justicia\nen el\ntrabajo</string>
    <string name="justice_ciudadanos">Justicia\npara\nciudadanos</string>
    <string name="justice_familias">Justicia\npara\nfamilias</string>
    <string name="justice_emprendedores">Justicia\npara\nemprendedores</string>
    <string name="justice_vecinal">Justicia\nvecinal y\ncomunitaria</string>
    <string name="justice_otros">Otros\ntemas de\nJusticia Cotidiana</string>
    
    <!-- Add Testimonio -->
    <string name="testimonios_add_name">Nombre</string>
    <string name="testimonios_add_email">Correo electrónico</string>
    <string name="testimonios_add_category">Categoría</string>
    <string name="testimonios_add_city">Entidad federativa donde ocurrió</string>
    <string name="testimonios_add_age">Edad</string>
    <string name="testimonios_add_gender">Género</string>
    <string name="testimonios_add_grade">Escolaridad</string>
    
    <string name="testimonios_add_gender_male">Hombre</string>
    <string name="testimonios_add_gender_female">Mujer</string>
    <string name="testimonios_add_gender_none">Sin especificar</string>
    
    <string name="testimonios_add_explication_count">0 de 2000</string>
    <string name="testimonios_add_explication">Explicación (Obligatorio)</string> 
    
    <string name="testimonios_add_btn_senddata">Enviar testimonio</string>
    
    <string name="postdata_loading">Enviando testimonio.</string>
    <string name="getdata_loading">Obteniendo información.</string>
    
    <string name="loading_testimonios">Cargando testimonios</string>
    
    <!-- Propuestas -->
    <string name="propuestas_preview">A partir del 22 de enero podrás conocer y comentar las propuestas de expertos e instituciones para mejorar la justicia cotidiana. Espéralo.</string>
    
    <string name="propuestas_login_fb_label">Para poder ver y participar en las propuestas, inicia sesión con Facebook.</string>
    
    <string name="propuesta_nomore">Sin propuestas\nen esta\ncategoría</string>
    
    <string name="propuestas_menu_current_votes">Votos hasta ahora: %1$d</string>
    
    <string name="propuestas_vote">Vota esta propuesta:</string>
    
    <string name="propuestas_votes_favor">a favor</string>
    <string name="propuestas_votes_contra">en contra</string>
    <string name="propuestas_votes_abstencion">abstención</string>
    
    <string name="propuestas_votes_same">%1$s personas han votado %2$s como tú</string>
    
    <string name="propuestas_question">Pregunta</string>
    <string name="propuestas_question_sings">¿?</string>
    <string name="propuestas_question_chart_title">Datos recabados hasta el momento</string>
    
    <string name="propuestas_btn_comments_vermas">Ver comentarios</string>
    <string name="propuestas_btn_comments_hintcomment">Escribe un argumento</string>
    <string name="propuestas_btn_comments_sendcomment">Enviar</string>
    
    <!-- Validations EditText -->
    <string name="edittext_emtpy">Llena los campos obligatorios.</string>
    <string name="edittext_obligatorio">Obligatorio.</string>
    <string name="edittext_wrong_info">Corrige los campos marcados.</string>
    <string name="edittext_error_string">Escribe letras validas [a-z A-Z].</string>
    <string name="edittext_error_number">Escribe números validos [0&#8211;9].</string>
    <string name="edittext_error_email">Escribe una sintaxis de correo valido.</string>
    
    <!-- Facebook 654570061331636-->
    <string name="facebook_app_id">654570061331636</string>
    <string name="facebook_post_message">Post message to Facebook</string>
    <string name="facebook_is_not_installed">Facebook app is not installed</string>
    <string name="facebook_package">com.facebook.katana</string>
    <string name="facebook_session_is_not_open">Session is not open</string>
    <string name="facebook_login">Facebook</string>
    <string name="facebook_logout">Cerrar sesión de Facebook</string>
    
</resources>