<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/testimonios_add_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:ems="10"
                android:hint="@string/testimonios_add_name"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/testimonios_add_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:ems="10"
                android:hint="@string/testimonios_add_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/testimonios_add_tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/testimonios_add_category"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />
            
            <Spinner
                android:id="@+id/testimonios_add_sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:prompt="@string/testimonios_add_category" />

            <EditText
                android:id="@+id/testimonios_add_et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:minLines="3"
                android:maxLines="3"
                android:ems="10"
                android:hint="@string/testimonios_add_description"
                android:background="@color/accent_ligth"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/testimonios_add_tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/testimonios_add_city"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />
            
            <Spinner
                android:id="@+id/testimonios_add_sp_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:prompt="@string/testimonios_add_city" />

            <TextView
                android:id="@+id/testimonios_add_tv_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/testimonios_add_age"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />
            
            <Spinner
                android:id="@+id/testimonios_add_sp_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:prompt="@string/testimonios_add_age" />

            <TextView
                android:id="@+id/testimonios_add_tv_gendre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/testimonios_add_gender"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />
            
            <RadioGroup
                android:id="@+id/testimonios_add_rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent_ligth"
                android:padding="10dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/testimonios_add_rb_gender_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/testimonios_add_gender_male" />

                <RadioButton
                    android:id="@+id/testimonios_add_rb_gender_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/testimonios_add_gender_female" />
                
                <RadioButton
                    android:id="@+id/testimonios_add_rb_gender_none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/testimonios_add_gender_none" />
            </RadioGroup>

            <TextView
                android:id="@+id/testimonios_add_tv_scholarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/testimonios_add_scholarity"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />
            
            <Spinner
                android:id="@+id/testimonios_add_sp_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:prompt="@string/testimonios_add_scholarity" />

            <Button
                android:id="@+id/testimonios_add_btn_senddata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testimonios_add_btn_senddata" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>